1999-12-21  Andreas Jaeger  <aj@suse.de>

	* sysdeps/unix/sysv/linux/m68k/putpmsg.c: Add missing #.
	* sysdeps/unix/sysv/linux/mips/putpmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/putpmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/mips/getmsg.c: Add missing #.
	* sysdeps/unix/sysv/linux/mips/putmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/getmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/putmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/getmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/putmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/m68k/getpmsg.c: Add missing #.
	* sysdeps/unix/sysv/linux/mips/getpmsg.c: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/getpmsg.c: Likewise.

1999-12-21  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/i386/getmsg.c: New file.
	* sysdeps/unix/sysv/linux/i386/getpmsg.c: New file.
	* sysdeps/unix/sysv/linux/i386/putmsg.c: New file.
	* sysdeps/unix/sysv/linux/i386/putpmsg.c: New file.
	* sysdeps/unix/sysv/linux/m68k/getmsg.c: New file.
	* sysdeps/unix/sysv/linux/m68k/getpmsg.c: New file.
	* sysdeps/unix/sysv/linux/m68k/putmsg.c: New file.
	* sysdeps/unix/sysv/linux/m68k/putpmsg.c: New file.
	* sysdeps/unix/sysv/linux/mips/getmsg.c: New file.
	* sysdeps/unix/sysv/linux/mips/getpmsg.c: New file.
	* sysdeps/unix/sysv/linux/mips/putmsg.c: New file.
	* sysdeps/unix/sysv/linux/mips/putpmsg.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/getmsg.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/getpmsg.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/putmsg.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/putpmsg.c: New file.
	* sysdeps/unix/sysv/linux/powerpc/syscalls.list: Add getpmsg and
	putpmsg.

1999-12-20  Ulrich Drepper  <drepper@cygnus.com>

	* sysdeps/unix/sysv/linux/lxstat64.c: Include "kernel-features.h"
	before testing for __ASSUME_STAT64_SYSCALL.
	* sysdeps/unix/sysv/linux/fxstat64.c: Likewise.
	* sysdeps/unix/sysv/linux/xstat64.c: Likewise.

1999-12-20  Andreas Schwab  <schwab@suse.de>
